add product crud with migrations
